--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 2.6)
 project("Atlas Components")
 
 add_subdirectory(api)
+add_subdirectory(db)
 add_subdirectory(http)
 add_subdirectory(jsonrpc)
 
