Add new auth functions to common library.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,6 @@ add_subdirectory(db)
 add_subdirectory(http)
 add_subdirectory(jsonrpc)
 
-file(GLOB atlas_common_sources log/*.cpp)
+file(GLOB atlas_common_sources log/*.cpp *.cpp)
 add_library(atlas-com-common ${atlas_common_sources})
 
