Add HTTP static text handler.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 2.6)
 
 project("Atlas Components")
 
+include("cmake/atlas_add_objcopy_target.cmake")
+
 include_directories("lib/catch/include")
 add_subdirectory(src)
 
