Add pure-min.css to static files.

--- a/web/CMakeLists.txt
+++ b/web/CMakeLists.txt
@@ -11,6 +11,7 @@ atlas_add_objcopy_target(atlas ShareTechMono-Regular.ttf ShareTechMono_Regular_t
 atlas_add_objcopy_target(atlas ShareTech-Regular.ttf ShareTech_Regular_ttf.o)
 atlas_add_objcopy_target(atlas modal.js modal_js.o)
 atlas_add_objcopy_target(atlas modal.css modal_css.o)
+atlas_add_objcopy_target(atlas pure-min.css pure_min_css.o)
 
 add_custom_command(
     OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/static.a
@@ -28,6 +29,7 @@ add_custom_command(
         ${CMAKE_CURRENT_BINARY_DIR}/ShareTech_Regular_ttf.o
         ${CMAKE_CURRENT_BINARY_DIR}/modal_js.o
         ${CMAKE_CURRENT_BINARY_DIR}/modal_css.o
+        ${CMAKE_CURRENT_BINARY_DIR}/pure_min_css.o
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     COMMENT "Archiving static HTML libraries to ${CMAKE_CURRENT_BINARY_DIR}/static.a"
     DEPENDS
@@ -44,6 +46,7 @@ add_custom_command(
         ${CMAKE_CURRENT_BINARY_DIR}/ShareTech_Regular_ttf.o
         ${CMAKE_CURRENT_BINARY_DIR}/modal_js.o
         ${CMAKE_CURRENT_BINARY_DIR}/modal_css.o
+        ${CMAKE_CURRENT_BINARY_DIR}/pure_min_css.o
     )
 
 add_custom_target(atlas-web-text ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/static.a)
