Add static web resources.

--- a/web/CMakeLists.txt
+++ b/web/CMakeLists.txt
@@ -17,8 +17,10 @@ atlas_add_web_library(
         "css/plant-theme.css"
         "css/teletype-theme.css"
         "jquery.js"
+        "jquery.min.js"
         "modal.css"
         "modal.js"
+        "moment.min.js"
         "open-iconic/font/css/open-iconic.css"
         "open-iconic/font/fonts/open-iconic.ttf"
         "open-iconic/font/fonts/open-iconic.woff"
