Auth library depends on DB library.

--- a/src/auth/CMakeLists.txt
+++ b/src/auth/CMakeLists.txt
@@ -2,6 +2,7 @@ file(GLOB atlas_auth_sources *.cpp)
 add_library(atlas-auth ${atlas_auth_sources})
 target_link_libraries(
     atlas-auth
+    atlas-com-db
     atlas-com-http
     hades
     styx
