Add Open Iconic SVG and SVG Injector script.

--- a/web/CMakeLists.txt
+++ b/web/CMakeLists.txt
@@ -27,8 +27,11 @@ atlas_add_web_library(
         "open-iconic/font/css/open-iconic.css"
         "open-iconic/font/fonts/open-iconic.ttf"
         "open-iconic/font/fonts/open-iconic.woff"
+        "open-iconic/sprite/open-iconic.svg"
         "pure-min.css"
         "stacked_application.js"
+        "svg-injector.js"
+        "svg-injector.min.js"
         "underscore-min.js"
         "underscore.js"
         "xcharts/xcharts.css"
